--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -53,6 +53,42 @@
         "th": "",
         "id": ""
     },
+    "instance.text.my-group":{
+        "en": "My Group",
+        "fr": "Mon Groupe",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.text.invite-to-group":{
+        "en": "Invite in the Group",
+        "fr": "Inviter dans le Groupe",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
     "instance.btn.enter":{
         "en": "Enter",
         "fr": "Entrer",
@@ -65,6 +101,24 @@
         "jp": "",
         "pt": "",
         "vi": "Tiến Vào",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.btn.buy-reward":{
+        "en": "Buy 1",
+        "fr": "Acheter 1",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
         "ar": "",
         "it": "",
         "pl": "",
