--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -46,7 +46,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Phần Thưởng Kết Thúc Còn: {0}/3",
         "ar": "",
         "it": "",
         "pl": "",
@@ -64,7 +64,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Tổ Đội Của Tôi",
         "ar": "",
         "it": "",
         "pl": "",
@@ -82,7 +82,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Mời vào Tổ Đội",
         "ar": "",
         "it": "",
         "pl": "",
@@ -118,7 +118,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Mua 1",
         "ar": "",
         "it": "",
         "pl": "",
