--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3599,6 +3599,60 @@
         "th":"",
         "id":""
     },
+    "UI.windows.instance.table.column.name":{
+        "en":"Name",
+        "fr":"Nom",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Tên",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.instance.table.column.state":{
+        "en":"State",
+        "fr":"Etat",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.instance.table.column.operation":{
+        "en":"Operation",
+        "fr":"Opération",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.challenges.title":{
         "en":"Challenges",
         "fr":"Challenges",
