--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3707,6 +3707,42 @@
         "th":"",
         "id":""
     },
+    "UI.windows.group.leader":{
+        "en":"Leader",
+        "fr":"Chef",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.group.member":{
+        "en":"Member",
+        "fr":"Membre",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.auto.title":{
         "en":"Auto Mode",
         "fr":"Mode Auto",
