--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -125,6 +125,42 @@
         "th": "",
         "id": ""
     },
+    "instance.btn.refresh":{
+        "en": "Refresh",
+        "fr": "Rafraichir",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.btn.back_to_hall":{
+        "en": "Back to Hall",
+        "fr": "Retour à la liste",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
     "instance.INSTANCE_20.name":{
         "en": "Deathly Mineshaft",
         "fr": "Mine Mortelles",
