--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3664,7 +3664,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cảnh Báo! Rời khỏi phụ bản sẽ đuổi người chơi khác ra khỏi hoạt động.",
         "ar":"",
         "it":"",
         "pl":"",
