--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3682,7 +3682,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn chuẩn bị mua một phần thưởng ngày. Sẽ tốn {0}.",
         "ar":"",
         "it":"",
         "pl":"",
