--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3592,7 +3592,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhận Phần Thưởng Phụ Bản",
         "ar":"",
         "it":"",
         "pl":"",
