--- a/Translation/item.json
+++ b/Translation/item.json
@@ -359,6 +359,24 @@
         "th":"",
         "id":"Lainnya"
     },
+    "item.type.rune":{
+        "en":"Rune",
+        "fr":"Rune",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.1.name":{
         "en":"Gold Pile",
         "fr":"Pile d'Or",
