--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2573,6 +2573,60 @@
         "th":"",
         "id":"Sarung tangan Dabura"
     },
+    "item.2000.name":{
+        "en":"Foxhound - Belt",
+        "fr":"Foxhound - Ceinture",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.2001.name":{
+        "en":"Foxhound - Boots",
+        "fr":"Foxhound - Bottes",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.2002.name":{
+        "en":"Foxhound - Cape",
+        "fr":"Foxhound - Cape",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.3000.name":{
         "en":"[Spirit Egg] Pudding Slime",
         "fr":"[Oeuf d'esprit] Slime Pudding",
