--- a/Translation/item.json
+++ b/Translation/item.json
@@ -370,7 +370,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cổ Ngữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2584,7 +2584,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lạp Khuyển - Đai Lưng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2602,7 +2602,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lạp Khuyển - Giày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2620,7 +2620,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lạp Khuyển - Áo Choàng",
         "ar":"",
         "it":"",
         "pl":"",
