--- a/Translation/general.json
+++ b/Translation/general.json
@@ -916,5 +916,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "general.label.exit":{
+        "en":"Exit",
+        "fr":"Sortir",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Vào",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
