--- a/Translation/general.json
+++ b/Translation/general.json
@@ -928,7 +928,25 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Vào",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "general.label.reward":{
+        "en":"Reward",
+        "fr":"Récompense",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
