--- a/Translation/general.json
+++ b/Translation/general.json
@@ -910,7 +910,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Vào",
+        "vi":"Tiến Vào",
         "ar":"",
         "it":"",
         "pl":"",
@@ -928,7 +928,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thoát Ra",
         "ar":"",
         "it":"",
         "pl":"",
@@ -946,7 +946,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phần Thưởng",
         "ar":"",
         "it":"",
         "pl":"",
