--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8416,7 +8416,7 @@
         "de":"Wilde Früchte",
         "jp":"",
         "pt":"",
-        "vi":"Trái cây hoang dã",
+        "vi":"Quả Dại",
         "ar":"",
         "it":"",
         "pl":"",
