--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -442,7 +442,7 @@
         "de":"Magische Beherrschung",
         "jp":"",
         "pt":"",
-        "vi":"Thống trị Ma pháp",
+        "vi":"Thống Trị Ma pháp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -874,7 +874,7 @@
         "de":"Eile",
         "jp":"",
         "pt":"",
-        "vi":"Gia tốc",
+        "vi":"Gia Tốc",
         "ar":"",
         "it":"",
         "pl":"",
