--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1126,7 +1126,7 @@
         "de":"Hauptquest",
         "jp":"",
         "pt":"",
-        "vi":"Nhiệm Vụ Chính ",
+        "vi":"Nhiệm Vụ Chính",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2836,7 +2836,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nâng cấp bang hội cần {0} vàng.<br>Tiếp tục chứ ?",
+        "vi":"Nâng cấp bang hội cần {0} vàng.<br>Tiếp tục chứ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2854,7 +2854,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nâng cấp bang hội cần {0} tài nguyên.<br>Tiếp tục chứ ?",
+        "vi":"Nâng cấp bang hội cần {0} tài nguyên.<br>Tiếp tục chứ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2890,7 +2890,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bạn chưa trang bị bất kỳ Tinh Linh nào",
+        "vi":"Bạn chưa trang bị Tinh Linh nào",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2962,7 +2962,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hầu hết các loại quái vật đều có thể trở thành tinh. Nếu bạn tìm được một Linh Trứng, nhấn chuột phải lên quả trứng để thử ấp nó, nhưng sẽ có khả năng thất bại.",
+        "vi":"Hầu hết các loại quái vật đều có thể trở thành Tinh Linh. Nếu bạn tìm được một Linh Trứng, nhấn chuột phải lên quả trứng để thử ấp nó, nhưng sẽ có khả năng thất bại.<br> 1) Giết quái vật Tinh Anh có thể rơi ra trứng.<br> 2) Trong khi đánh phó bản, tiêu diệt trùm cuối và các loại quái đặc biệt có thể rơi ra trứng.<br> 3) Đánh trùm thế giới cũng có khả năng nhỏ rơi ra trứng.<br> 4) Loại trứng càng hiếm, loài thú đó càng mạnh, và cũng có nhiều may mắn hơn để trứng nở ra thành công.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2998,7 +2998,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Giới Hạn Cấp {0}.",
+        "vi":"Giới Hạn Cấp {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3160,7 +3160,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nâng cấp",
+        "vi":"Nâng Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3196,7 +3196,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Vứt bỏ",
+        "vi":"Rút",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3214,7 +3214,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Điểm Số Thiên phú",
+        "vi":"Điểm Thiên Phú",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3232,7 +3232,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tốn {0} điểm thiên phú",
+        "vi":"Tốn {0} Điểm Thiên Phú",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3430,7 +3430,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhiệm Vụ Lặp",
+        "vi":"Nhiệm Vụ Tái Lặp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3466,7 +3466,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhiệm Vụ Thế",
+        "vi":"Nhiệm Vụ Thay Thế",
         "ar":"",
         "it":"",
         "pl":"",
