--- a/Translation/event.json
+++ b/Translation/event.json
@@ -64,7 +64,7 @@
         "de":"Einführung",
         "jp":"",
         "pt":"",
-        "vi":"Giới thiệu.",
+        "vi":"Giới Thiệu.",
         "ar":"",
         "it":"",
         "pl":"",
