--- a/Translation/general.json
+++ b/Translation/general.json
@@ -100,7 +100,7 @@
         "de":"Tokens",
         "jp":"",
         "pt":"",
-        "vi":"KNB",
+        "vi":"Kim Tệ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -226,7 +226,7 @@
         "de":"Quest Belohnung",
         "jp":"",
         "pt":"",
-        "vi":"Phần thưởng",
+        "vi":"Phần Thưởng Nhiệm Vụ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -244,7 +244,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nghề",
+        "vi":"Lớp Nghề",
         "ar":"",
         "it":"",
         "pl":"",
@@ -352,7 +352,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thường",
+        "vi":"Tầm Thường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -370,7 +370,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Không Phổ Biến",
+        "vi":"Hãn Hữu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -388,7 +388,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hiếm",
+        "vi":"Quý Hiếm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -514,7 +514,7 @@
         "de":"Gebunden wenn ausgerüstet",
         "jp":"",
         "pt":"",
-        "vi":"Khóa khi Trang bị",
+        "vi":"Khóa khi Mặc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -532,7 +532,7 @@
         "de":"Gebunden wenn eingesammelt",
         "jp":"",
         "pt":"",
-        "vi":"Khóa khi Nhặt Lên",
+        "vi":"Khóa khi Nhặt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -676,7 +676,7 @@
         "de":"Abbrechen",
         "jp":"",
         "pt":"",
-        "vi":"Hủy",
+        "vi":"Hủy Bỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -712,7 +712,7 @@
         "de":"Keine Kosten",
         "jp":"",
         "pt":"",
-        "vi":"Miễn Phí",
+        "vi":"Không tốn",
         "ar":"",
         "it":"",
         "pl":"",
