--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -28,7 +28,7 @@
         "de":"Erforderliche Klasse",
         "jp":"",
         "pt":"",
-        "vi":"Yêu Cầu Nghề",
+        "vi":"Yêu Cầu Lớp Nghề",
         "ar":"",
         "it":"",
         "pl":"",
@@ -208,7 +208,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Giới Hạn Vật Phẩm",
+        "vi":"Giới Hạn Vật Phẩm Mang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -280,7 +280,7 @@
         "de":"Setzte als Ziel",
         "jp":"",
         "pt":"",
-        "vi":"Chọn làm Mục Tiêu",
+        "vi":"Chọn Làm Mục Tiêu",
         "ar":"",
         "it":"",
         "pl":"",
