--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -154,7 +154,7 @@
         "de":"System",
         "jp":"",
         "pt":"",
-        "vi":"Hệ thống",
+        "vi":"Hệ Thống",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1270,7 +1270,7 @@
         "de":"Tapferkeit",
         "jp":"",
         "pt":"",
-        "vi":"Chiến Thần",
+        "vi":"Dũng Sĩ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1324,7 +1324,7 @@
         "de":"Alle",
         "jp":"",
         "pt":"",
-        "vi":"Tất cả",
+        "vi":"Tất Cả",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1594,7 +1594,7 @@
         "de":"Bunker",
         "jp":"",
         "pt":"",
-        "vi":"Kho Ẩn",
+        "vi":"Kho",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1864,7 +1864,7 @@
         "de":"Materialkosten",
         "jp":"",
         "pt":"",
-        "vi":"Nguyên Liệu Cần",
+        "vi":"Chi Phí Nguyên Liệu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1882,7 +1882,7 @@
         "de":"Goldkosten",
         "jp":"",
         "pt":"",
-        "vi":"Vàng Cần",
+        "vi":"Chi Phí Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2062,7 +2062,7 @@
         "de":"Senden",
         "jp":"",
         "pt":"",
-        "vi":"Gửi bán",
+        "vi":"Gửi Bán",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2080,7 +2080,7 @@
         "de":"Bieten",
         "jp":"",
         "pt":"",
-        "vi":"Đấu giá",
+        "vi":"Đ.Giá",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2314,7 +2314,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thông Số Trang Bị của {0}",
+        "vi":"Thông Số Trang Bị Của {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2422,7 +2422,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thành lập bang hội yêu cầu cấp độ 20 & 300,000 vàng",
+        "vi":"Thành lập bang hội yêu cầu Cấp 20 & 300,000 Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2530,7 +2530,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Sung Góp Tài Nguyên.",
+        "vi":"Sung Góp T.Nguyên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2692,7 +2692,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Một khi rời khỏi bang hội, bạn sẽ phải đợi một ngày trước khi gia nhập bang hội khác. Tiếp tục chứ ?",
+        "vi":"Một khi rời khỏi bang hội, bạn sẽ phải đợi một ngày trước khi gia nhập bang hội khác. Tiếp tục chứ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2836,7 +2836,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nâng cấp bang hội cần {0} vàng.<br>Tiếp tục chứ?",
+        "vi":"Nâng cấp bang hội sẽ tốn {0} vàng.<br>Tiếp tục chứ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2854,7 +2854,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nâng cấp bang hội cần {0} tài nguyên.<br>Tiếp tục chứ?",
+        "vi":"Nâng cấp bang hội sẽ tốn {0} tài nguyên.<br>Tiếp tục chứ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2980,7 +2980,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"C.Độ Linh Hồn: {0}",
+        "vi":"Cấp Linh Hồn: {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3070,7 +3070,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tư Chất",
+        "vi":"T.Chất",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3376,7 +3376,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đã Đạt Cấp Độ Tối Đa",
+        "vi":"Đã Đạt Cấp Tối Đa",
         "ar":"",
         "it":"",
         "pl":"",
