--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -118,7 +118,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tư Chất",
+        "vi":"T.Chất",
         "ar":"",
         "it":"",
         "pl":"",
@@ -154,7 +154,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Điểm Còn",
+        "vi":"Điểm Còn Lại",
         "ar":"",
         "it":"",
         "pl":"",
