--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3005,6 +3005,24 @@
         "th":"",
         "id":""
     },
+    "item.3058.name":{
+        "en":"[Spirit Egg] Redback Beatle",
+        "fr":"[Oeuf d'esprit] Coléoptère dorouge",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.3021.name":{
         "en":"[Spirit Egg] Brown Bat",
         "fr":"[Oeuf d'esprit] Chauve-souris Brune",
@@ -4043,6 +4061,24 @@
         "jp":"",
         "pt":"",
         "vi":"Sáp Thây Ma",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4058.name":{
+        "en":"Redback Beatle",
+        "fr":"Coléoptère dorouge",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
