--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3016,7 +3016,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Cánh Cứng Lưng Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4078,7 +4078,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cánh Cứng Lưng Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
