--- a/Translation/event.json
+++ b/Translation/event.json
@@ -46,7 +46,7 @@
         "de":"Keine Zeit",
         "jp":"",
         "pt":"",
-        "vi":"Không Hoạt Động",
+        "vi":"Ngoài Giờ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -64,7 +64,7 @@
         "de":"Einführung",
         "jp":"",
         "pt":"",
-        "vi":"Giới thiệu",
+        "vi":"Giới Thiệu.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -100,7 +100,7 @@
         "de":"Schnellere Lava Kern-Erneuerungsrate",
         "jp":"",
         "pt":"",
-        "vi":"Tốc độ tái tạo Lõi Dung nham nhanh hơn",
+        "vi":"Tốc độ tái tạo Lõi Dung Nham nhanh hơn",
         "ar":"",
         "it":"",
         "pl":"",
