--- a/Translation/general.json
+++ b/Translation/general.json
@@ -82,7 +82,7 @@
         "de":"Token",
         "jp":"",
         "pt":"",
-        "vi":"KNB",
+        "vi":"Kim Tệ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -100,7 +100,7 @@
         "de":"Tokens",
         "jp":"",
         "pt":"",
-        "vi":"KNB",
+        "vi":"Kim Tệ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -154,7 +154,7 @@
         "de":"Exp",
         "jp":"",
         "pt":"",
-        "vi":"Kinh nghiệm",
+        "vi":"K.Nghiệm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -172,7 +172,7 @@
         "de":"Magiepunkte",
         "jp":"",
         "pt":"",
-        "vi":"Điểm kỹ năng",
+        "vi":"Điểm Phép",
         "ar":"",
         "it":"",
         "pl":"",
@@ -226,7 +226,7 @@
         "de":"Quest Belohnung",
         "jp":"",
         "pt":"",
-        "vi":"Phần thưởng",
+        "vi":"Phần Thưởng Nhiệm Vụ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -244,7 +244,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Lớp",
+        "vi":"Lớp Nghề",
         "ar":"",
         "it":"",
         "pl":"",
@@ -352,7 +352,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thường",
+        "vi":"Tầm Thường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -370,7 +370,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tạm",
+        "vi":"Hãn Hữu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -388,7 +388,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hiếm",
+        "vi":"Quý Hiếm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -415,7 +415,7 @@
     },
     "general.rarity.exotic":{
         "en":"Exotic",
-        "fr":"Exotique",
+        "fr":"Éxotique",
         "es":"",
         "ch":"",
         "kr":"",
@@ -424,7 +424,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Khác Thường",
+        "vi":"Độc Lạ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -478,7 +478,7 @@
         "de":"Level",
         "jp":"",
         "pt":"",
-        "vi":"Cấp độ",
+        "vi":"Cấp Độ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -496,7 +496,7 @@
         "de":"Lvl.",
         "jp":"",
         "pt":"",
-        "vi":"Lv.",
+        "vi":"Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -514,7 +514,7 @@
         "de":"Gebunden wenn ausgerüstet",
         "jp":"",
         "pt":"",
-        "vi":"Khóa khi Trang bị",
+        "vi":"Khóa khi Mặc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -532,7 +532,7 @@
         "de":"Gebunden wenn eingesammelt",
         "jp":"",
         "pt":"",
-        "vi":"Khóa khi nhặt lên",
+        "vi":"Khóa khi Nhặt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -586,7 +586,7 @@
         "de":"PVP",
         "jp":"",
         "pt":"",
-        "vi":"PK",
+        "vi":"Sát",
         "ar":"",
         "it":"",
         "pl":"",
@@ -658,7 +658,7 @@
         "de":"Annehmen",
         "jp":"",
         "pt":"",
-        "vi":"Chấp nhận",
+        "vi":"Chấp Nhận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -676,7 +676,7 @@
         "de":"Abbrechen",
         "jp":"",
         "pt":"",
-        "vi":"Hủy",
+        "vi":"Hủy Bỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -694,7 +694,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Danh sách",
+        "vi":"Danh Sách",
         "ar":"",
         "it":"",
         "pl":"",
@@ -712,7 +712,7 @@
         "de":"Keine Kosten",
         "jp":"",
         "pt":"",
-        "vi":"Không tốn tiền",
+        "vi":"Không tốn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -748,7 +748,7 @@
         "de":"Sekunde",
         "jp":"",
         "pt":"",
-        "vi":"giây",
+        "vi":"Giây",
         "ar":"",
         "it":"",
         "pl":"",
@@ -766,7 +766,7 @@
         "de":"Sek",
         "jp":"",
         "pt":"",
-        "vi":"s",
+        "vi":"Giây",
         "ar":"",
         "it":"",
         "pl":"",
@@ -838,7 +838,115 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đại Tinh Anh",
+        "vi":"Thủ Lĩnh",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "general.label.expel":{
+        "en":"Expel",
+        "fr":"Expulser",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Đuổi Ra",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "general.label.transfert":{
+        "en":"Transfer",
+        "fr":"Transfert",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Chuyển Qua",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "general.label.leave":{
+        "en":"Leave",
+        "fr":"Partir",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Rời",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "general.label.enter":{
+        "en":"Enter",
+        "fr":"Entrer",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Tiến Vào",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "general.label.exit":{
+        "en":"Exit",
+        "fr":"Sortir",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Thoát Ra",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "general.label.reward":{
+        "en":"Reward",
+        "fr":"Récompense",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Phần Thưởng",
         "ar":"",
         "it":"",
         "pl":"",
