--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -10,7 +10,7 @@
         "de":"Ausrüstungsort",
         "jp":"",
         "pt":"",
-        "vi":"Trang bị",
+        "vi":"Vị Trí Trang Bị",
         "ar":"",
         "it":"",
         "pl":"",
@@ -28,7 +28,7 @@
         "de":"Erforderliche Klasse",
         "jp":"",
         "pt":"",
-        "vi":"Vai trò",
+        "vi":"Yêu Cầu Lớp Nghề",
         "ar":"",
         "it":"",
         "pl":"",
@@ -46,7 +46,7 @@
         "de":"Erforderliches Geschlecht",
         "jp":"",
         "pt":"",
-        "vi":"Giới tính",
+        "vi":"Yêu Cầu Giới Tính",
         "ar":"",
         "it":"",
         "pl":"",
@@ -118,7 +118,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thiên Phú",
+        "vi":"T.Chất",
         "ar":"",
         "it":"",
         "pl":"",
@@ -136,7 +136,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tài Năng Tinh Linh",
+        "vi":"Thiên Phú Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -154,7 +154,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Điểm Còn",
+        "vi":"Điểm Còn Lại",
         "ar":"",
         "it":"",
         "pl":"",
@@ -172,7 +172,7 @@
         "de":"Mod Stats",
         "jp":"",
         "pt":"",
-        "vi":"Thuộc tính nâng cấp",
+        "vi":"Thuộc Tính Nâng cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -190,7 +190,7 @@
         "de":"Verzauberungen Stats",
         "jp":"",
         "pt":"",
-        "vi":"Thuộc tính tăng cường",
+        "vi":"Thuộc Tính Tăng Cường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -208,7 +208,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Số Vật Mang Tối Đa",
+        "vi":"Giới Hạn Vật Phẩm Mang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -226,7 +226,7 @@
         "de":"Passive",
         "jp":"",
         "pt":"",
-        "vi":"Bị động",
+        "vi":"Bị Động",
         "ar":"",
         "it":"",
         "pl":"",
@@ -244,7 +244,7 @@
         "de":"{0} sek Abklingzeit",
         "jp":"",
         "pt":"",
-        "vi":"Thời gian hồi chiêu {0} giây",
+        "vi":"{0} giây hồi chiêu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -262,7 +262,7 @@
         "de":"Instant",
         "jp":"",
         "pt":"",
-        "vi":"Lập tức",
+        "vi":"Lập Tức",
         "ar":"",
         "it":"",
         "pl":"",
@@ -280,7 +280,7 @@
         "de":"Setzte als Ziel",
         "jp":"",
         "pt":"",
-        "vi":"Chọn làm mục tiêu",
+        "vi":"Chọn Làm Mục Tiêu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -298,7 +298,7 @@
         "de":"Flüstern",
         "jp":"",
         "pt":"",
-        "vi":"Nói riêng",
+        "vi":"Nói Riêng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -316,7 +316,7 @@
         "de":"Name kopieren",
         "jp":"",
         "pt":"",
-        "vi":"Sao chép tên",
+        "vi":"Sao Chép Tên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -334,7 +334,7 @@
         "de":"Einladen in Gruppe",
         "jp":"",
         "pt":"",
-        "vi":"Mời vào nhóm",
+        "vi":"Mời Vào Nhóm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -352,7 +352,7 @@
         "de":"Bestimme neuen Leiter",
         "jp":"",
         "pt":"",
-        "vi":"Chuyển đội trưởng",
+        "vi":"Chuyển Đội Trưởng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -370,7 +370,7 @@
         "de":"Aus Gruppe werfen",
         "jp":"",
         "pt":"",
-        "vi":"Đuổi khỏi nhóm",
+        "vi":"Đuổi Khỏi Nhóm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -388,7 +388,7 @@
         "de":"Gruppe verlassen",
         "jp":"",
         "pt":"",
-        "vi":"Rời khỏi nhóm",
+        "vi":"Rời Khỏi Nhóm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -406,7 +406,7 @@
         "de":"Gruppe auflösen",
         "jp":"",
         "pt":"",
-        "vi":"Giải tán nhóm",
+        "vi":"Giải Tán Nhóm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -424,7 +424,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Kiểm đồ",
+        "vi":"Kiểm Đồ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -442,7 +442,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Mời bang hội",
+        "vi":"Mời Bang Hội",
         "ar":"",
         "it":"",
         "pl":"",
